--- a/Game.ipynb
+++ b/Game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "84346786-d4df-4d2e-9c6c-7ecd9a367bd9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3d37f56f-160b-41d3-986f-21634d29e639",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "1b0e0d18-01bd-401c-a647-50d45adf050a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "f35e3686-040b-4d3d-8c32-8c21df6f21c8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "8cd7dc69-020e-4aa8-9c8a-eac5f86d5258",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "8edb1061-86de-4e51-b00e-2f66d1cdec46",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "8aed27cf-0dbb-47da-92e8-1514396e2c51",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "022ca9ab-7f4c-4438-979b-8c115bfb970f",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "24742eb6-6e42-4723-b796-1afcbe200f66",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "70b32096-15e5-40b0-b850-8d455ca9e538",
    "metadata": {},
    "outputs": [],
@@ -184,27 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "bd78bddc-915e-4da7-9aaf-6b293c7537cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Game setup\n",
-    "player1 = Player('One')\n",
-    "player2 = Player('Two')\n",
+    "player_one = Player('One')\n",
+    "player_two = Player('Two')\n",
     "\n",
     "new_deck = Deck()\n",
     "new_deck.shuffle()\n",
     "\n",
     "for x in range(26):\n",
-    "    player1.add_cards(new_deck.deal())\n",
-    "    player2.add_cards(new_deck.deal())\n",
+    "    player_one.add_cards(new_deck.deal())\n",
+    "    player_two.add_cards(new_deck.deal())\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "375bf9ca-0e5b-401e-815e-9a896f486fab",
    "metadata": {},
    "outputs": [],
@@ -214,32 +214,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "71bd6615-7cc1-44c6-bb8f-c5cd9872b965",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Round Number: 1\n",
+      "Round Number: 2\n",
+      "Round Number: 3\n",
+      "Round Number: 4\n",
+      "Round Number: 5\n",
+      "Round Number: 6\n",
+      "Round Number: 7\n",
+      "Round Number: 8\n",
+      "Round Number: 9\n",
+      "Round Number: 10\n",
+      "Round Number: 11\n",
+      "WAR!\n",
+      "Round Number: 12\n",
+      "Round Number: 13\n",
+      "WAR!\n",
+      "Round Number: 14\n",
+      "Round Number: 15\n",
+      "Round Number: 16\n",
+      "Round Number: 17\n",
+      "Round Number: 18\n",
+      "Round Number: 19\n",
+      "WAR!\n",
+      "Round Number: 20\n",
+      "Round Number: 21\n",
+      "Round Number: 22\n",
+      "Round Number: 23\n",
+      "Round Number: 24\n",
+      "Round Number: 25\n",
+      "Round Number: 26\n",
+      "Round Number: 27\n",
+      "WAR!\n",
+      "Round Number: 28\n",
+      "Round Number: 29\n",
+      "Round Number: 30\n",
+      "WAR!\n",
+      "Round Number: 31\n",
+      "Round Number: 32\n",
+      "Round Number: 33\n",
+      "Round Number: 34\n",
+      "Round Number: 35\n",
+      "Round Number: 36\n",
+      "Round Number: 37\n",
+      "WAR!\n",
+      "Round Number: 38\n",
+      "Round Number: 39\n",
+      "Round Number: 40\n",
+      "Round Number: 41\n",
+      "Round Number: 42\n",
+      "Round Number: 43\n",
+      "WAR!\n",
+      "Player 1 unable to declare war\n",
+      "Player 2 wins!\n"
+     ]
+    }
+   ],
    "source": [
     "round_number = 0\n",
     "\n",
     "while game_on:\n",
     "    round_number += 1\n",
-    "    print(f\"Round Number: {round_numbe}\")\n",
-    "    if len(player1.all_cards) == 0:\n",
+    "    print(f\"Round Number: {round_number}\")\n",
+    "    if len(player_one.all_cards) == 0:\n",
     "        print(\"Player 1 is out of cards, Player 2 won!\")\n",
     "        game_on = False\n",
     "        break\n",
-    "    if len(player2.all_cards) == 0:\n",
+    "    if len(player_two.all_cards) == 0:\n",
     "        print(\"Player 2 is out of cards, Player 1 won!\")\n",
     "        game_on = False\n",
     "        break\n",
     "\n",
     "    #Start a new round\n",
     "    player_one_cards = []#Current cards in play\n",
-    "    player_one_cards.append([player1.remove_one())\n",
+    "    player_one_cards.append(player_one.remove_one())\n",
     "    \n",
     "    player_two_cards = []\n",
-    "    player_two_cards.append([player2.remove_one())\n",
-    "    "
+    "    player_two_cards.append(player_two.remove_one())\n",
+    "\n",
+    "    at_war = True\n",
+    "\n",
+    "    while at_war:\n",
+    "        if player_one_cards[-1].value > player_two_cards[-1].value:\n",
+    "            player_one.add_cards(player_one_cards)\n",
+    "            player_two.add_cards(player_two_cards)\n",
+    "            at_war = False\n",
+    "        elif player_one_cards[-1].value < player_two_cards[-1].value:\n",
+    "            player_two.add_cards(player_one_cards)\n",
+    "            player_two.add_cards(player_two_cards)\n",
+    "            at_war = False  \n",
+    "        else:\n",
+    "            print('WAR!')\n",
+    "            if len(player_one.all_cards) < 5:\n",
+    "                print('Player 1 unable to declare war')\n",
+    "                print('Player 2 wins!')\n",
+    "                game_on = False\n",
+    "                break\n",
+    "            elif len(player_two.all_cards) < 5:\n",
+    "                print('Player 2 unable to declare war')\n",
+    "                print('Player 1 wins!')\n",
+    "                game_on = False\n",
+    "                break\n",
+    "            else:\n",
+    "                for num in range(3):\n",
+    "                    player_one_cards.append(player_one.remove_one())\n",
+    "                    player_two_cards.append(player_two.remove_one())"
    ]
   }
  ],
